Fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <p class="price">$6.00</p>
             </div>
             <div class="menu-item">
-                <p>Riso, Chil con carne, Cheddar</p>
+                <p>Riso, Chili con carne, Cheddar</p>
                 <p class="price">$6.00</p>
             </div>
             <div class="menu-item">
@@ -92,7 +92,7 @@
                 <p class="price">$6.00</p>
             </div>
             <div class="menu-item">
-                <p>Fagioli neri, Caritas, Cheddar</p>
+                <p>Fagioli neri, Carnitas, Cheddar</p>
                 <p class="price">$6.00</p>
             </div>
         </div>
@@ -117,7 +117,7 @@
         <div class="menu-section">
             <h2>Nachos</h2>
             <div class="menu-item">
-                <p>Cheddar</p>
+                <p>Con Cheddar</p>
                 <p class="price">$4.00</p>
             </div>
             <div class="menu-item">
